<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia_text">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="post_remove_menu">Remove</string>
    <string name="edit_post_text">Post text</string>
    <string name="btn_save_post">Save</string>
    <string name="error_empty_post">Content can\'t be empty</string>
    <string name="btn_post_edit">Edit</string>
    <string name="activity_edit_post">Activity edit post</string>
    <string name="edit_message">Edit Message</string>
    <string name="cancel_edit">cancel edit</string>
    <string name="author_message_edit">Author message edit</string>
    <string name="description_chats_item">Chats Item</string>
    <string name="description_view_item">View Item</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="text_add_new_post">Add new Post</string>
    <string name="description_video_play">video play</string>
    <string name="message_status_empty">Empty</string>
    <string name="message_status_error">Network Error</string>
    <string name="button_retry">Retry</string>
    <string name="error_server">Server Error</string>
    <string name="error_network">Network Error</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="body_empty">Body is null</string>
    <string name="title_new_message">Свежие записи</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="menu_save">Save</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_login">Login:</string>
    <string name="title_password">Password</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="error_login">Login can\'t be empty</string>
    <string name="error_pass">Pass can\'t be empty</string>
    <string name="message_add_dialog">You need to log in</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="message_sign_out_dialog">Are you sure?</string>
    <string name="title_name">Имя</string>
    <string name="title_login_reg">Login</string>
    <string name="title_password_reg">Пароль</string>
    <string name="title_pass_retry">Пароль повторить</string>
    <string name="title_btn_reg">Регистрация</string>
    <string name="error_validate_value">Заполните все поля</string>
    <string name="error_validate_pass">Неверно указан пароль</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_error">Notification %1$s does not match any value Action</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>


</resources>